Fixed a scaling issue on mobile devices. Add some 3rd party CSS classes.

--- a/source/src/app/result/result.component.scss
+++ b/source/src/app/result/result.component.scss
@@ -1,46 +1,1 @@
-.d-grid {
-    display: grid !important;
-}
-
-.border-box {
-    box-sizing: border-box !important;
-}
-
-@media (max-width: 575.98px) {
-    .grid-template-responsive {
-        grid-template: auto / repeat(1, 1fr) !important;
-        grid-gap: 4px;
-    }
-}
-
-@media (min-width: 576px) {
-    .grid-template-responsive {
-        grid-template: auto / repeat(2, 1fr) !important;
-        grid-gap: 8px;
-    }
-}
-
-@media (min-width: 768px) {
-    .grid-template-responsive {
-        grid-template: auto / repeat(4, 2fr) !important;
-        grid-gap: 16px;
-    }
-}
-
-@media (min-width: 992px) {
-    .grid-template-responsive {
-        grid-template: auto / repeat(8, 2fr) !important;
-        grid-gap: 32px;
-    }
-}
-
-@media (min-width: 1200px) {
-    .grid-template-responsive {
-        grid-template: auto / repeat(12, 4fr) !important;
-        grid-gap: 64px;
-    }
-}
-
-.margin-top-responsive {
-    margin-top: auto
-}
+@import '../../styles.scss';
